[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "traffic-env"
version = "1.0.0"
description = "Smart traffic signal optimization environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "traffic-env"
entry_point = "api.py"
tasks = ["easy", "medium", "hard"]
